--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./css/style.css" />
 </head>
 <body>
+    <main>
     <section class="hero list">
         <div class="conteiner">
             <h1 class="text">FRESH HARVEST BOX<br> IS YOUR ONE-STOP PLACE FOR<br> A DELICIOUS FRUIT BASKET</h1>
@@ -40,5 +41,6 @@
                 </ul>
         </div>
     </section>
+    </main>
 </body>
 </html>
