--- a/index.html
+++ b/index.html
@@ -88,8 +88,10 @@
             </h1>
           </div>
           <div class="hero-img-container">
-          <img
-            class="hero-main-img" src=" " alt=" "/>
+          <ul class="hero-main-img">
+            <li class="hero-main-img-banana"></li>
+            <li class="hero-main-img-straw"></li>
+          </ul>
         </div>
           <button class="hero-button" type="button" data-modal-open>
             Shop<br />now
